# microservices/user/app/db/models/user.model.go
@@ -4,7 +4,7 @@ type User struct {
 	Id        int    `json:"id" db:"id"`
 	Login     string `json:"login" db:"login"`
 	Password  string `json:"password" db:"password"`
-	FirstName string `json:"firstName" db:"firstName"`
-	LastName  string `json:"lastName" db:"lastName"`
+	FirstName string `json:"first_name" db:"first_name"`
+	LastName  string `json:"last_name" db:"last_name"`
 	Birthday  string `json:"birthday" db:"birthday"`
 }
