# microservices/user/docs/swagger.yaml
@@ -5,11 +5,11 @@ definitions:
       birthday:
         example: "2000-01-01"
         type: string
-      firstName:
-        example: firstName
+      first_name:
+        example: first_name
         type: string
-      lastName:
-        example: lastName
+      last_name:
+        example: last_name
         type: string
       login:
         example: login
@@ -21,8 +21,8 @@ definitions:
         type: string
     required:
     - birthday
-    - firstName
-    - lastName
+    - first_name
+    - last_name
     - login
     - password
     type: object
@@ -31,11 +31,11 @@ definitions:
       birthday:
         example: "2000-01-01"
         type: string
-      firstName:
-        example: firstName
+      first_name:
+        example: first_name
         type: string
-      lastName:
-        example: lastName
+      last_name:
+        example: last_name
         type: string
       password:
         example: password
@@ -46,11 +46,11 @@ definitions:
     properties:
       birthday:
         type: string
-      firstName:
+      first_name:
         type: string
       id:
         type: integer
-      lastName:
+      last_name:
         type: string
       login:
         type: string
